--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
 		"isolatedModules": true,
 		"noEmit": true,
 		"noImplicitAny": false,
+		"allowImportingTsExtensions": true,
 		"jsx": "react-jsx"
 	},
 	"include": ["src", "declaration.d.ts"]
